--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,3 +24,30 @@ spec:
             cpu: "50m"
         ports:
         - containerPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: java-application
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: states
+  template:
+    metadata:
+      labels:
+        app: states
+    spec:
+      containers:
+      - name: states
+        image: kulbhushanmayer/kaniko:latest
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: "40m"
+          limits:
+            memory: "100Mi"
+            cpu: "50m"
+        ports:
+        - containerPort: 8080
